@@ -5,12 +5,17 @@ import java.util.Collections;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import com.example.demo.entity.Users;
 import com.example.demo.exceptions.InvalidSessionException;
+import com.example.demo.exceptions.UserNotFoundException;
+import com.example.demo.repository.UserRepository;
 import com.example.demo.service.SessionService;
+import java.util.*;
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -21,10 +26,14 @@ import jakarta.servlet.http.HttpServletResponse;
 public class SessionAuthenticationFilter extends OncePerRequestFilter {
 
     private final SessionService sessionService;
+    private final UserRepository userRepository;
 
-    public SessionAuthenticationFilter(SessionService sessionService) {
+    public SessionAuthenticationFilter(SessionService sessionService,UserRepository userRepository) {
         this.sessionService = sessionService;
+        this.userRepository=userRepository;
     }
+    
+    
 
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) {
@@ -32,9 +41,10 @@ public class SessionAuthenticationFilter extends OncePerRequestFilter {
         String path = request.getServletPath();
 
         return path.equals("/users/register")
-                || path.equals("/users/login");
+                || path.equals("/users/login")
+                || path.startsWith("/swagger-ui")
+                || path.startsWith("/v3/api-docs");
     }
-
     @Override
     protected void doFilterInternal(
             HttpServletRequest request,
@@ -54,12 +64,18 @@ public class SessionAuthenticationFilter extends OncePerRequestFilter {
 
             Long userId = sessionService.getUserIdBySession(sessionId);
 
+
+            		Users user = userRepository.findById(userId)
+                    .orElseThrow(() -> new UserNotFoundException("User not found"));
+
             Authentication authentication =
                     new UsernamePasswordAuthenticationToken(
                             userId,
                             null,
-                            Collections.emptyList());
+                            List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
+                    );
 
+            SecurityContextHolder.getContext().setAuthentication(authentication);
             SecurityContextHolder.getContext().setAuthentication(authentication);
 
             filterChain.doFilter(request, response);
